--- a/composer.json
+++ b/composer.json
@@ -1,8 +1,8 @@
 {
-    "name": "catpaw/starter",
+    "name": "tncrazvan/budget",
     "type": "project",
-    "description": "A php CatPaw starter template",
-    "homepage": "https://github.com/tncrazvan/catpaw-starter",
+    "description": "Create your local budget",
+    "homepage": "https://github.com/tncrazvan/budget",
     "license": "MIT",
     "scripts": {
         "load": "composer dump-autoload -o",
@@ -13,6 +13,7 @@
         "action:test": [],
         "test": [],
         "start": "php -dxdebug.mode=off ./bin/start --entry='./src/main.php' --libraries='./src/lib/' --info",
+        "debug": "php -dxdebug.mode=debug -dxdebug.start_with_request=yes ./bin/start --entry='./src/main.php' --libraries='./src/lib/' --info",
         "watch": "php -dxdebug.mode=debug -dxdebug.start_with_request=yes ./bin/start --entry='./src/main.php' --libraries='./src/lib/' --resources='./resources/' --info --watch",
         "product": "php -dxdebug.mode=off -dxdebug.start_with_request=no -dphar.readonly=0 ./product.phar --build-config",
         "build": "php -dxdebug.mode=off -dxdebug.start_with_request=no -dphar.readonly=0 ./product.phar --build-config --build",
