--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -15,8 +15,7 @@
             "cwd": "${workspaceFolder}",
             "args": [
                 "--libraries='./src/lib/'",
-                "--entry='./src/main.php'",
-                "--income"
+                "--entry='./src/main.php'"
             ],
             "runtimeArgs": [
                 "-dxdebug.start_with_request=yes",
