--- a/build.yml
+++ b/build.yml
@@ -1,4 +1,4 @@
-name: app
+name: budget.phar
 entry: ./src/main.php
 libraries: ./src/lib
 match: /^\.\/(\.build-cache|src|vendor|resources|bin)\/.*/
